feat(webhook): add endpoint to send events using convoy webhooks

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -23,6 +23,7 @@
     "typeRoots": [ "./node_modules/@types", "./types" ],
     "paths": {
       "@services/*": [ "./services/*" ],
+      "@lib/*": [ "./lib/*" ],
     },
   },
   "include": [
