--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "ioredis": "^5.3.2",
+    "k6": "^0.0.0",
     "lodash": "^4.17.21",
     "moleculer": "^0.14.29",
     "moleculer-web": "^0.10.5",
     "nats": "^2.15.1",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "dotenv": "^16.3.1"
+    "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/cookie-parser": "^1.4.3",
+    "@types/k6": "^0.45.0",
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
