--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@moleculer/channels": "^0.1.6",
+    "amqplib": "^0.10.3",
     "axios": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
