--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -24,6 +24,7 @@
     "paths": {
       "@services/*": [ "./services/*" ],
       "@lib/*": [ "./lib/*" ],
+      "@models/*": [ "./models/*" ],
     },
   },
   "include": [
